# ideastatica-public

./: .editorconfig  .gitignore  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Directory.Build.props  Directory.Packages.props  LICENSE  NuGet.Config  PULL_REQUEST_TEMPLATE.md  RCS-Api-swagger-doc.yml  README.md  buildNugets.ps1  f  index.html  index.json  manifest.json  toc.html  toc.json  xrefmap.yml
api-bimapi/: IdeaStatiCa.BimApi.BulkSelection.html  IdeaStatiCa.BimApi.IIdeaAnchorGrid.html  IdeaStatiCa.BimApi.IIdeaArcSegment3D.html  IdeaStatiCa.BimApi.IIdeaBend.html  IdeaStatiCa.BimApi.IIdeaBoltAssembly.html  IdeaStatiCa.BimApi.IIdeaBoltGrid.html  IdeaStatiCa.BimApi.IIdeaCombiInput.html  IdeaStatiCa.BimApi.IIdeaCombiItem.html  IdeaStatiCa.BimApi.IIdeaConcreteBlock.html  IdeaStatiCa.BimApi.IIdeaConnectedMember.html  IdeaStatiCa.BimApi.IIdeaConnectionModel.html  IdeaStatiCa.BimApi.IIdeaConnectionPoint.html  IdeaStatiCa.BimApi.IIdeaCrossSection.html  IdeaStatiCa.BimApi.IIdeaCrossSectionByCenterLine.html  IdeaStatiCa.BimApi.IIdeaCrossSectionByComponents.html  (+54 more)
python/rcsclient/: LICENSE  Project2.ideaRcs  README.md  RcsClient 2.py  idea_statica_setup.py  ideastatica_rcs_client.py  project1-calc-example.py  pyproject.toml  rcsproject.py  requirements.txt  setup.py  test1.py  update-loading-example.py
python/rcsclient/ideastatica_rcs_client/: __init__.py  brief_result_tools.py  detail_results_tools.py  helpers.py  idea_statica_setup.py  ideastatica_rcs_client.py  loading_tools.py  rcs_client.py  rcsproject.py
python/rcsclient/projects/: Project1.IdeaRcs  RcsOpenModel3.xml
(+6920 files in other folders)
