[project]
name = "ideastatica_rcs_client"
version = "23.1.4.1107"
authors = [
  { name="Martin Pospisil", email="martin.pospisil@ideastatica.com" },
]
description = "IDEA StatiCa RCS client fo Python"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/idea-statica/ideastatica-public"
Issues = "https://github.com/idea-statica/ideastatica-public/issues"